--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "start": "ts-node ./src/index.ts"
+    "start": "ts-node ./src/server.ts"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
