fixed inputs and added logger

--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
   },
   "dependencies": {
     "@types/axios": "^0.14.0",
+    "@types/pino": "^7.0.5",
     "axios": "^0.27.2",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "pino": "^8.4.0"
   }
 }
