refactored docker setup

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,9 @@ version: "3.7"
 
 services:
   app: 
-    image: node.jshelloworld
+    build: 
+      context: .
+      dockerfile: Dockerfile
     command: sh -c "yarn install && yarn start"
     ports:
        - 3000:3000
